the codes has been moved

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link type="text/css" rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+    <input type="button" name="test" value="Test" onclick="testJson()" />
+    <p id="output"></p>
     <script type="javascript" src="js/main.js"></script>
 </body>
 </html>
