JS was working but 404

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link type="text/css" rel="stylesheet" href="css/style.css">
+    <script type="javascript" src="js/main.js"></script>
 </head>
 <body>
+<!--  Javascript was not working  <script type="javascript" src="js/main.js"></script>-->
+    <script src="js/main.js"></script>
     <input type="button" name="test" value="Test" onclick="testJson()" />
     <p id="output"></p>
-    <script type="javascript" src="js/main.js"></script>
 </body>
 </html>
