Deleted needless files

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link type="text/css" rel="stylesheet" href="css/style.css">
-    <script type="javascript" src="js/main.js"></script>
+<!--    <script type="javascript" src="js/main.js"></script>-->
 </head>
 <body>
 <!--  Javascript was not working  <script type="javascript" src="js/main.js"></script>-->
-    <script src="js/main.js"></script>
+<!--  Uncaught TypeError: Cannot set property ‘innerHTML’ of null   <script src="js/main.js"></script>-->
     <input type="button" name="test" value="Test" onclick="testJson()" />
     <p id="output"></p>
+    <script src="js/main.js"></script>
 </body>
 </html>
